# hyprland-active-window

./: .gitignore  README.md  setup.cfg
