[metadata]
name = hyprland-active-window
version = 0.0.1
description = Saves a history of your activewindow to a CSV file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/purarue/hyperland-active-window
author = purarue
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
install_requires =
    click>=8.1
    logzero
python_requires = >=3.11
include_package_data = True
scripts =
    bin/hyprland-active-window

[flake8]
ignore = E501,E402,W503,E266,E203

[mypy]
pretty = True
disallow_any_generics = False
show_error_context = True
show_error_codes = True
namespace_packages = True
disallow_subclassing_any = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
check_untyped_defs = True
disallow_untyped_calls = True
